--- a/moving_title.html
+++ b/moving_title.html
@@ -1,4 +1,5 @@
-<html><head>
+<html>
+	<head>
 		<title style="color:#ff0000"></title>
 	</head>
 
@@ -7,7 +8,7 @@
 		<!-- this script got from www.javascriptfreecode.com-Coded by: Krishna Eydat -->
 
      		<script language="javascript">
-			msg = "Sofa King prices are so low, we pay YOU! ";
+			msg = "Sofa King prices are so low, we pay YOU! "; // Modify this
 
 			msg = "..." + msg;pos = 0;
 
@@ -15,13 +16,11 @@
 			{
 				document.title = msg.substring(pos, msg.length) + msg.substring(0, pos++);
 				if (pos >  msg.length) pos = 0;
-				window.setTimeout("scrollTitle()",200);
+				window.setTimeout("scrollTitle()", 200);
 			}
 
 			scrollTitle();
 		</script>
 
-		<h style="font-size:140px;">ربنا يحميك</h>
-
-
-</body></html>
+	</body>
+</html>
