--- a/moving_title.html
+++ b/moving_title.html
@@ -3,12 +3,11 @@
 		<title style="color:#ff0000"></title>
 	</head>
 
-
 	<body style="background-color:red;">
 		<!-- this script got from www.javascriptfreecode.com-Coded by: Krishna Eydat -->
 
      		<script language="javascript">
-			msg = "Sofa King prices are so low, we pay YOU! "; // Modify this
+			msg = "Sofa King prices are so low, we pay YOU! ";
 
 			msg = "..." + msg;pos = 0;
 
@@ -16,11 +15,13 @@
 			{
 				document.title = msg.substring(pos, msg.length) + msg.substring(0, pos++);
 				if (pos >  msg.length) pos = 0;
-				window.setTimeout("scrollTitle()", 200);
+				window.setTimeout("scrollTitle()",200);
 			}
 
 			scrollTitle();
 		</script>
+
+		<h1 style="font-size:140px;">Hello world.</h>
 
 	</body>
 </html>
