--- a/spaceGame.html
+++ b/spaceGame.html
@@ -203,7 +203,7 @@
 
 		<br>
 		<h3>You are a tiny yellow space ship in an ice cave. Use the arrow keys.</h3>
-		<div id="location"><h2></h2></div>
-		<div id="speed"><h2></h2></div>
+		<div id="location"></div>
+		<div id="speed"></div>
 	</body>
 </html>
